# calendar-db

./: .gitignore  README.md  compose.yaml  main.py  mise.toml  pyproject.toml
app/: Dockerfile  export_calendar.py  gcal_sync_tool.py  main.py  my_events.csv  pyproject.toml  test.py
be/: .dockerignore  Dockerfile  __init__.py  db.py  main.py  pyproject.toml  spec.md
be/src/: db.py  main.py
be/tests/: conftest.py  test_api.py
db/initdb.d/: init.sql
fe/: .dockerignore  README.development.md  package-lock.json  package.json  spec.md  tsconfig.json  vite.config.ts
fe/public/: index.html  list.html
fe/public/assets/: index-BUK6VdJI.js  index-DrLUXmiV.js
fe/src/: server.ts
fe/src/client/: App.tsx  index.html
fe/src/client/pages/: Home.tsx  Instruction.tsx  List.tsx
kacfe/: Dockerfile  package.json  spec.md
kacfe/public/: index.html
kacfe/src/: server.ts
