[project]
name = "calendar-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "mysql-connector-python>=9.5.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
]

[tool.uv.workspace]
members = [
    "agentapi",
    "be",
]
